--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@
   border-radius: 3px;
   z-index: 1;
 }
+.O {
+   color: aqua; 
+}
+.n {
+    color: red;
+}
 .board-column.muuri-item-releasing {
   z-index: 2;
 }
