--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   position: absolute;
   left: 0;
   right: 0;
-  width: 11%;
+  width: 14vh;
   margin: 1% 1%;
   background: #f0f0f0;
   border-radius: 3px;
