--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    height: 100vh;
+    height: 100%;
 }
 
 .board {
@@ -10,7 +10,7 @@ body {
   position: absolute;
   left: 0;
   right: 0;
-  width: 14vh;
+  width: 14%;
   margin: 1% 1%;
   background: #f0f0f0;
   border-radius: 3px;
