--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
   position: absolute;
   width: 100%;
   margin: 2px 0;
-  font-size: 15%
+  font-size: 50px;
 }
 .board-item.muuri-item-releasing {
   z-index: 9998;
